refactor: test coverage
